# OpenGL-Project

./: CMakeLists.txt  Makefile  README.md  constants.cpp  glad.c  log.txt  main.cpp  util.cpp
include/: shader.hpp  util.hpp
include/glad/glad/: glad.h
includes/: constants.hpp
shaders/: fragment_shader.frag  vertex_shader.vert
src/: constants.cpp  main.cpp  shader.cpp  util.cpp
